k8s/00-namespace-configmaps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prs-production
  labels:
    name: prs-production
    environment: production
